--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,17 +29,10 @@ jobs:
         run: sh build.sh
 
       - name: Publish to Nexus
-        uses: sonatype-nexus-community/nexus-repo-github-action@1.0.0
-        with:
-          serverUrl: https://nexus.xebialabs.com/nexus
-          username: ${{ secrets.NEXUS_CI_USER }}
-          password: ${{ secrets.NEXUS_CI_USER_PWD }}
-          format: raw
-          repository: Community
-          coordinates: groupId=com.xebialabs.xlrelease.plugins artifactId=${{ env.PLUGIN }} version=${{ env.VERSION }}
-          assets: extension=jar
-          filename: ${{ format('build/{0}-{1}.jar', env.PLUGIN, env.VERSION) }}
-
+        run: |
+          curl --fail-with-body -v -u ${{ secrets.NEXUS_CI_USER }}:${{ secrets.NEXUS_CI_USER_PWD }} \
+          --upload-file build/${{ env.PLUGIN }}-${{ env.VERSION }}.jar \
+          https://nexus.xebialabs.com/nexus/content/repositories/community/com/xebialabs/test/${{ env.PLUGIN }}-${{ env.VERSION }}.jar
 
       - name: Log in to Container registry
         uses: docker/login-action@v2
