--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           curl --fail-with-body -v -u ${{ secrets.NEXUS_CI_USER }}:${{ secrets.NEXUS_CI_USER_PWD }} \
           --upload-file build/${{ env.PLUGIN }}-${{ env.VERSION }}.jar \
-          https://nexus.xebialabs.com/nexus/content/repositories/community/com/xebialabs/test/${{ env.PLUGIN }}-${{ env.VERSION }}.jar
+          https://nexus.xebialabs.com/nexus/content/repositories/community/com/xebialabs/xlrelease/plugins/${{ env.PLUGIN }}/${{ env.PLUGIN }}-${{ env.VERSION }}.jar
 
       - name: Log in to Container registry
         uses: docker/login-action@v2
